--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -206,7 +206,8 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  height: 40px;
+  height: 60px;
+   max-width: 100%;
 }
 
 .listing-container-my-bids {
