fixed issue with dropdown nav in header

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -32,7 +32,7 @@
   @apply ml-20;
 }
 
-.auth-main{
+.auth-main {
   @apply mt-32;
   height: max-content;
 }
@@ -100,17 +100,17 @@
   @apply flex flex-row items-center justify-end  gap-2;
 }
 
-.desktop-select{
-  @apply  flex flex-row  gap-4 ;
+.desktop-select {
+  @apply flex flex-row  gap-4;
 }
 
-.Categories{
-  @apply pb-4
+.Categories {
+  @apply pb-4;
 }
 
-.mobile-select{
- visibility:hidden;
- @apply p-0;
+.mobile-select {
+  visibility: hidden;
+  @apply p-0;
 }
 
 .search-input {
@@ -145,7 +145,6 @@
   @apply rounded-full border-2 border-[var(--primary-color)];
 }
 
-
 @layer utilities {
   .z-12 {
     z-index: 12;
@@ -154,40 +153,38 @@
 
 .header-styles {
   @apply w-full flex flex-col h-56 fixed bg-black z-10 border-2 border-[var(--primary-color)];
-
 }
 
-.header-styles-other-pages{
-   @apply w-full flex flex-col h-24 fixed bg-black z-10 border-2 border-[var(--primary-color)];
+.header-styles-other-pages {
+  @apply w-full flex flex-col h-24 fixed bg-black z-10 border-2 border-[var(--primary-color)];
 }
 
 .sidebar-styles {
-  @apply flex flex-row items-center z-12 justify-center bg-black gap-4  ;
+  @apply flex flex-row items-center z-12 justify-center bg-black gap-4;
 }
-.hamburger{
+.hamburger {
   display: none;
 }
 
-.nav-menu{
+.nav-menu {
   @apply flex flex-row gap-4;
 }
 
-
-
 .sidebar-height-when-closed {
   @apply max-h-[100px] top-0 bottom-0 pt-0;
-  overflow-y: visible
+  overflow-y: visible;
 }
 
 .sidebar-height-when-open {
   @apply h-80 w-auto top-0 bottom-0 pt-0 overflow-y-scroll;
 }
 
-.search-category-box{ @apply flex flex-col items-center w-[100%] h-auto gap-0;  }
+.search-category-box {
+  @apply flex flex-col items-center w-[100%] h-auto gap-0;
+}
 
-.desktop-category-div{
+.desktop-category-div {
   @apply flex flex-row;
-
 }
 
 .nav-styles {
@@ -195,7 +192,7 @@
 }
 
 .nav-styles-hover {
-  @apply flex flex-row ;
+  @apply flex flex-row;
 }
 .sidebar-li-layout {
   @apply flex flex-row;
@@ -204,7 +201,6 @@
 .span-text-hover {
   @apply flex flex-row text-[var(--secondary-color)];
 }
-
 
 .outer-container {
   @apply flex flex-col w-[100%] mt-6 pt-10 items-center justify-center md:pt-52 md:grid md:grid-cols-2 xl:grid-cols-3 lg:gap-4 gap-y-4 md:gap-y-4;
@@ -218,12 +214,12 @@
   @apply flex flex-col md:flex-row items-center w-[300px] h-[380px] md:w-[380px]  justify-center gap-2  border-2 border-[var(--primary-color)] rounded-lg;
 }
 
-.listing-header{
+.listing-header {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   height: 60px;
-   max-width: 100%;
+  max-width: 100%;
 }
 
 .listing-container-my-bids {
@@ -370,106 +366,102 @@
   @apply absolute w-[127px] h-[127px] md:w-[170px] md:h-[170px] rounded-full border-2 border-[var(--primary-color)];
 }
 
+@media (max-width: 767px) {
+  .sidebar-styles {
+    @apply flex flex-col gap-0 items-center z-12 justify-center bg-black border-2 border-[var(--primary-color)] fixed top-0;
+  }
 
+  .hamburger {
+    display: block;
+  }
 
+  .auth-main {
+    @apply mt-20;
+  }
 
+  .search-category-box {
+    @apply h-[50px] gap-4;
+  }
 
-@media (max-width:767px){
-  .sidebar-styles{
- @apply flex flex-col gap-0 items-center z-12 justify-center bg-black border-2 border-[var(--primary-color)] fixed top-0;}
+  .hidden {
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+  }
 
- .hamburger{
-  display: block;
+  .header-styles {
+    @apply flex flex-row h-40;
+  }
+
+  .header-styles-other-pages {
+    @apply flex flex-row h-24 border-none;
+  }
+
+  .mobile-select {
+    @apply block border w-[200px] text-white px-2 py-1 rounded !important;
+    visibility: visible;
+    z-index: 1;
+    position: relative;
+    appearance: none;
+  }
+
+  .mobile-select:focus {
+    position: relative;
+    z-index: 10;
+  }
+
+  .logo-margin-logged-in-closed {
+    @apply mt-[600px];
+  }
+
+  .desktop-select {
+    @apply hidden;
+  }
+
+  .nav-menu {
+    @apply flex flex-col items-center justify-center gap-4 pt-2 pb-2;
+  }
+
+  .nav-styles {
+    @apply flex flex-col items-center justify-center gap-2;
+  }
+
+  .sidebar-height-when-closed {
+    @apply pb-32  top-0 bottom-0 pt-0 overflow-y-visible;
+  }
+
+  .sidebar-height-when-open {
+    @apply h-auto;
+  }
+
+  .nav-styles-hover {
+    @apply flex flex-col items-start justify-center gap-2;
+  }
+
+  .nav-hover {
+    @apply w-[150px];
+  }
+
+  .logo-top-margin {
+    @apply mt-[360px];
+  }
+
+  .logo-no-margin {
+    @apply mt-0;
+  }
+
+  .listing-container-styles {
+    @apply h-[500px];
+  }
 }
 
-.auth-main{
-  @apply mt-20;
-
-}
-
-.search-category-box{ @apply  h-[50px] gap-4;  }
-
-
-
-.hidden{
-  visibility: hidden;
-  opacity: 0;
-transition: opacity 0.3s ease-in-out;
-}
-
-.header-styles{
-  @apply flex flex-row h-40;
-}
-
-.header-styles-other-pages{
-  @apply flex flex-row h-24 border-none;
-}
-
-.mobile-select {
-  @apply block border w-[200px] text-white px-2 py-1 rounded !important;
-  visibility: visible;
-  z-index:1;
-  position: relative;
-  appearance:none;
-}
-
-.mobile-select:focus{
-  position: relative;
-  z-index: 10;
-}
-
-.desktop-select{
-  @apply hidden;
-}
-
-.nav-menu{
-  @apply flex flex-col items-center justify-center gap-4 pt-2 pb-2;
-}
-
-.nav-styles {
-  @apply flex flex-col items-center justify-center gap-2 ;
-}
-
-.sidebar-height-when-closed {
-
-  @apply pb-32  top-0 bottom-0 pt-0 overflow-y-visible;
-}
-
-.sidebar-height-when-open {
-  @apply h-auto;
-}
-
-
-.nav-styles-hover {
-  @apply flex flex-col items-start justify-center gap-2;
-}
-
-.nav-hover {
-  @apply w-[150px];
-}
-
-.logo-top-margin{
-  @apply mt-[360px];
-}
-
-.logo-no-margin{
-  @apply mt-0;
-}
-
-.listing-container-styles{
-  @apply h-[500px]
-}
-
-
-}
-
-@media (max-width:384px){
-  .Categories{
+@media (max-width: 384px) {
+  .Categories {
     width: 295px;
     height: 300px;
     display: flex;
     justify-content: end;
-    position: relative
+    position: relative;
   }
 
   .search-bar-layout {
@@ -477,12 +469,11 @@ transition: opacity 0.3s ease-in-out;
     width: 300px;
   }
 
-  .search-cat-box-mobile{
+  .search-cat-box-mobile {
     @apply w-[800px] flex flex-col items-end;
   }
 
-  .search-button-box{
+  .search-button-box {
     @apply flex flex-row justify-center w-[200px];
   }
-
 }
