--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -349,13 +349,13 @@
 
 .image-container-individual-listing {
 
-display: grid;
+display: flex;
+  flex-direction: row;
   gap: 10px;
   padding: 10px;
   border-radius: 10px;
-
-  max-width: 750px;
-  width: 100%;
+  max-width: 80vw;
+  overflow-x: auto;
   items-center: center;
   justify-items: center;
 }
@@ -366,8 +366,8 @@ display: grid;
 }
 
 .listing-images-individual-listing {
-  @apply border-[var(--primary-color)] border-2;
-max-width: 500px;
+  @apply border-[var(--primary-color)] border-2 ;
+max-width: 300px;
 max-height: 500px;
 
   border-radius: 8px;
@@ -481,6 +481,21 @@ max-height: 500px;
 
 max-width: 300px;
 
+}
+
+.image-container-individual-listing {
+
+display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 10px;
+  border-radius: 10px;
+  max-width: 50vw;
+  max-height: 500px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  items-center: center;
+  justify-items: center;
 }
 }
 
