--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -153,7 +153,7 @@
 }
 
 .header-styles {
-  @apply w-full flex flex-col h-56 fixed bg-black z-10 border-2 border-[var(--primary-color)];
+  @apply pt-2 w-full flex flex-col h-56 fixed bg-black z-10 border-2 border-[var(--primary-color)];
 }
 
 .header-styles-other-pages {
