--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -160,7 +160,7 @@
 }
 
 .sidebar-styles {
-  @apply flex flex-row items-center z-12 justify-center bg-black gap-4;
+  @apply flex flex-row items-center z-12 justify-center bg-black gap-4 mt-[2px];
 }
 .hamburger {
   display: none;
@@ -398,8 +398,8 @@
 }
 
 @media (min-width: 385px) and (max-width: 767px) {
-  .sidebar-styles {
-    @apply flex flex-col gap-0 items-center z-12 justify-center bg-black border-2 border-[var(--primary-color)] fixed top-0;
+ .sidebar-styles {
+    @apply flex flex-col  gap-0 items-center z-12 justify-center bg-black border-2 border-[var(--primary-color)] fixed top-0;
   }
 
   .h1-home-box {
@@ -446,23 +446,25 @@
   }
 
   .logo-margin-logged-in-closed {
-    @apply mt-[600px];
+    @apply mt-[150px];
   }
-
+.logo-margin-logged-in-open {
+    @apply mt-[0px];
+  }
   .desktop-select {
     @apply hidden;
   }
 
   .nav-menu {
-    @apply flex flex-col items-center justify-center gap-4 pt-2 pb-2;
+  @apply flex flex-col h-[120px] mt-[10px] overflow-x-auto whitespace-nowrap;
   }
 
   .nav-styles {
     @apply flex flex-col items-center justify-center gap-2;
   }
 
-  .sidebar-height-when-closed {
-    @apply h-[120px] mt-[-80px] pb-[210px] top-0 bottom-0 pt-0 overflow-y-visible;
+.sidebar-height-when-closed {
+    @apply h-auto mt-[1px] pb-[80px] pt-[60px] flex flex-col justify-center top-0 bottom-0 overflow-y-visible;
   }
 
   .sidebar-height-when-open {
@@ -478,13 +480,12 @@
   }
 
   .logo-top-margin {
-    @apply mt-[360px];
+    @apply mt-[160px];
   }
 
   .logo-no-margin {
-    @apply mt-0;
+    @apply mt-[0px];
   }
-
   .listing-container-styles {
     @apply h-[620px] w-[300px];
   }
@@ -524,7 +525,7 @@
 @media (max-width: 384px) {
 
    .sidebar-styles {
-    @apply flex flex-col gap-0 items-center z-12 justify-center bg-black border-2 border-[var(--primary-color)] fixed top-0;
+    @apply flex flex-col  gap-0 items-center z-12 justify-center bg-black border-2 border-[var(--primary-color)] fixed top-0;
   }
 
   .sidebar-li-layout {
@@ -538,6 +539,7 @@
 
   .hamburger {
     display: block;
+
   }
 
 
@@ -577,7 +579,10 @@
   }
 
   .logo-margin-logged-in-closed {
-    @apply mt-[600px];
+    @apply mt-[150px];
+  }
+  .logo-margin-logged-in-open {
+    @apply mt-[0px];
   }
 
   .desktop-select {
@@ -585,15 +590,16 @@
   }
 
   .nav-menu {
-    @apply flex flex-col items-center justify-center gap-4 pt-2 pb-2 ;
-  }
+@apply flex flex-col h-[120px] mt-[10px] overflow-x-auto whitespace-nowrap;
+}
+
 
   .nav-styles {
-    @apply flex flex-col items-center justify-center gap-2 ;
+    @apply flex flex-col items-center justify-center gap-2  ;
   }
 
-  .sidebar-height-when-closed {
-    @apply h-[120px] mt-[-80px] pb-[210px]  top-0 bottom-0 pt-0 overflow-y-visible;
+ .sidebar-height-when-closed {
+    @apply h-auto mt-[1px] pb-[80px] pt-[60px] flex flex-col justify-center top-0 bottom-0 overflow-y-visible;
   }
 
   .sidebar-height-when-open {
@@ -609,11 +615,11 @@
   }
 
   .logo-top-margin {
-    @apply mt-[360px];
+    @apply mt-[160px];
   }
 
   .logo-no-margin {
-    @apply mt-0;
+    @apply mt-[0px];
   }
 
   .Categories {
@@ -646,5 +652,9 @@
 
   .desktop-category-div {
   @apply hidden;
+}
+
+.sign-out-btn{
+ @apply mt-[-10px] mb-[10px] ;
 }
 }
