--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -611,7 +611,8 @@
 
   .Categories {
     width: 100%;
-    height: 300px;
+    height: 50px;
+    padding-bottom: 0;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
