--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,3 @@
-@import 'https://fonts.googleapis.com/css2?family=Alumni+Sans:ital,wght@0,100..900;1,100..900&family=Charm:wght@400;700&display=swap';
 @import 'https://fonts.googleapis.com/css2?family=Alumni+Sans:ital,wght@0,100..900;1,100..900&family=Charm:wght@400;700&family=Sen:wght@400..800&display=swap';
 
 @tailwind base;
@@ -113,8 +112,11 @@
   @apply p-0 w-[200px];
 }
 
+
+   .search-icon{ @apply ml-8 mr-4 mt-[0] w-8 h-8 absolute;}
+
 .search-input {
-  @apply border-2 border-[var(--primary-color)] rounded-lg text-[var(--primary-color)] w-[150px];
+  @apply border-2 border-[var(--primary-color)] rounded-lg text-[var(--primary-color)] w-[300px];
 
   &:hover {
     @apply border-2 border-[var(--primary-color)] bg-black shadow-custom;
@@ -149,8 +151,16 @@
   .z-12 {
     z-index: 12;
   }
+  .font-custom1 {
+    font-family: var(--Font-1);
+  }
+  .font-custom2 {
+    font-family: var(--Font-2);
+  }
+  .font-custom {
+    font-family: var(--Font-1);
+  }
 }
-
 .header-styles {
   @apply w-full flex flex-col h-56 fixed bg-black z-10 border-2 border-[var(--primary-color)];
 }
@@ -276,7 +286,6 @@
   }
 }
 .carousel-control-left {
-  @apply absolute left-[-2px] top-[50%] transform -translate-y-1/2   z-20;
 }
 
 .carousel-control-left img {
@@ -516,6 +525,12 @@
   .sidebar-li-layout {
     @apply flex flex-row items-center;
   }
+
+    .search-input{
+    @apply w-[200px];
+  }
+
+   .search-icon{ @apply ml-0 mr-4 mt-[-28px] w-8 h-8 absolute;}
 }
 
 @media (max-width: 384px) {
@@ -528,7 +543,7 @@
   }
 
   .h1-home-box {
-    @apply mt-[150px] mb-8;
+    @apply mt-[0] mb-8;
   }
 
   .hamburger {
@@ -546,7 +561,7 @@
   }
 
   .header-styles {
-    @apply flex flex-row h-40;
+    @apply flex flex-row h-[160px];
   }
 
   .header-styles-other-pages {
@@ -630,7 +645,7 @@
   }
 
   .search-button-box {
-    @apply flex flex-row justify-center w-[200px];
+    @apply hidden;
   }
   .listing-images-individual-listing {
     max-width: 200px;
@@ -647,4 +662,11 @@
   .sign-out-btn {
     @apply mt-[-10px] mb-[10px];
   }
+
+  .search-input{
+    @apply w-[150px];
+  }
+
+  .search-icon{
+    @apply ml-8 w-6 h-6 absolute;}
 }
