--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -112,8 +112,9 @@
   @apply p-0 w-[200px];
 }
 
-
-   .search-icon{ @apply ml-8 mr-4 mt-[0] w-8 h-8 absolute;}
+.search-icon {
+  @apply ml-8 mr-4 mt-[0] w-8 h-8 absolute;
+}
 
 .search-input {
   @apply border-2 border-[var(--primary-color)] rounded-lg text-[var(--primary-color)] w-[300px];
@@ -286,7 +287,7 @@
   }
 }
 .carousel-control-left {
-   @apply absolute left-[-2px] top-[50%] transform -translate-y-1/2   z-20;
+  @apply absolute left-[-2px] top-[50%] transform -translate-y-1/2   z-20;
   z-index: 1000;
 }
 
@@ -528,11 +529,13 @@
     @apply flex flex-row items-center;
   }
 
-    .search-input{
+  .search-input {
     @apply w-[200px];
   }
 
-   .search-icon{ @apply ml-0 mr-4 mt-[-28px] w-8 h-8 absolute;}
+  .search-icon {
+    @apply ml-0 mr-4 mt-[-28px] w-8 h-8 absolute;
+  }
 }
 
 @media (max-width: 384px) {
@@ -639,13 +642,11 @@
 
   .search-bar-layout {
     @apply flex flex-row justify-end w-[100%];
-
   }
 
   .search-cat-box-mobile {
     @apply w-[100%] flex flex-col items-end h-[80px];
   }
-
 
   .listing-images-individual-listing {
     max-width: 200px;
@@ -663,10 +664,11 @@
     @apply mt-[-10px] mb-[10px];
   }
 
-  .search-input{
+  .search-input {
     @apply w-[180px];
   }
 
-  .search-icon{
-    @apply ml-2 mt-[-26px] w-6 h-6 absolute;}
+  .search-icon {
+    @apply ml-2 mt-[-26px] w-6 h-6 absolute;
+  }
 }
