--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -308,7 +308,7 @@
 }
 
 .form-styles {
-  @apply border-4 border-[var(--primary-color)] bg-[var(--tertiary-color)] items-center justify-center gap-2;
+  @apply border-4 border-[var(--primary-color)] bg-[var(--tertiary-color)] items-start justify-center gap-2;
 }
 
 .form-padding {
