--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -309,9 +309,9 @@
 
 .form-styles {
 
-  @apply border-4 border-[var(--primary-color)] bg-[var(--tertiary-color)] items-start justify-center gap-2;
 
-  @apply flex flex-col border-4 border-[var(--primary-color)] bg-[var(--tertiary-color)] items-center justify-center gap-2;
+
+  @apply flex flex-col border-4 border-[var(--primary-color)] bg-[var(--tertiary-color)] items-center justify-center w-[100%] gap-2;
 
 }
 
@@ -370,11 +370,15 @@
 }
 
 .social-media-icons-box {
-  @apply flex flex-row items-center justify-end gap-2;
+  @apply flex flex-row flex-wrap items-center justify-end gap-2 w-full;
 }
 
 .footer-text-layout {
-  @apply grid grid-cols-2 md:flex md:flex-row  items-center justify-start gap-0 md:gap-2;
+  @apply grid md:flex md:flex-row  items-center justify-start gap-0 md:gap-2;
+}
+
+.footer-text-layout a{
+  @apply text-[var(--tertiary-color)] hover:text-[var(--secondary-color)] transition-colors duration-300 text-xs md:text-sm lg:text-base;
 }
 
 .image-container-individual-listing {
